--- a/front/src/css/main.css
+++ b/front/src/css/main.css
@@ -313,6 +313,7 @@ th {
 td {
   position: relative;
   max-width: 200px;
+  min-width: 100px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
