--- a/front/scss/_temp.scss
+++ b/front/scss/_temp.scss
@@ -22,13 +22,37 @@
 
   //   non-visual
   display: flex;
-  white-space: nowrap;
   flex-direction: column;
-  overflow: visible;
+
+  // display: grid;
+  // grid-template-columns: 1fr;
 
   h1 {
     padding: 0.5rem;
     border-bottom: 2px solid $secondary-color;
+    cursor: pointer;
+  }
+
+  .attribute {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    padding: 2px;
+    border-bottom: 1px solid $lightgray;
+
+    label {
+      padding: 10px, 1rem;
+      color: $primary-color;
+    }
+
+    .attribute-content {
+      padding: 10px;
+      cursor: pointer;
+
+      &:hover {
+        background-color: lighten($secondary-color, 20%);
+      }
+    }
   }
 }
 
@@ -42,7 +66,7 @@
   max-width: calc(100vw - 24px);
   width: 30vw;
   min-height: 34px;
-  max-height: 697px;
+  max-height: 90vh;
   padding: 0.3rem;
 
   //   non-visual
@@ -53,7 +77,7 @@
 
   .filter {
     width: 100%;
-    border-bottom: 2px solid lighten(#000, 50%);
+    border-bottom: 2px solid $lightgray;
     padding-bottom: 5px;
     margin-bottom: 5px;
 
@@ -83,13 +107,11 @@
   width: 100%;
   min-height: 34px;
   font-size: 14px;
-  margin-right: 0px;
-  margin-bottom: 0px;
 
   // non visual
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 20fr;
   align-items: center;
-  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   cursor: pointer;
@@ -97,18 +119,14 @@
 
   &:hover {
     background: darken(rgba(242, 241, 238, 0.6), 8%);
+    overflow: visible;
   }
+}
 
-  #dot {
-    margin-right: 5px;
-    border-radius: 99px;
-    height: 8px;
-    width: 8px;
-    background-color: rgb(145, 145, 142);
-  }
-
-  .text {
-    display: block;
-    border-bottom: 2px solid gainsboro;
-  }
+#dot {
+  margin-right: 5px;
+  border-radius: 99px;
+  height: 8px !important;
+  width: 8px !important;
+  background-color: #aaa;
 }
