--- a/front/src/css/main.css
+++ b/front/src/css/main.css
@@ -181,8 +181,9 @@ a {
   width: 80vw;
   margin: auto;
   min-height: 80vh;
-  max-height: 90vh;
+  max-height: calc(100vh - 100px - 30px);
   padding: 1rem;
+  overflow-y: scroll;
   display: flex;
   flex-direction: column; }
   .overlay-window h1 {
