--- a/front/scss/main.scss
+++ b/front/scss/main.scss
@@ -1,6 +1,7 @@
 @import "utils";
 @import "config";
 @import "temp";
+@import "emotionList";
 
 #navbar {
   display: flex;
@@ -27,44 +28,8 @@
   }
 }
 
-#item-form {
-  padding: 10px;
-  border-bottom: 1px solid #ccc;
-}
-
-/* Form & Input */
-.form-input {
-  font-size: 18px;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  outline: none;
-
-  &:focus {
-    border: 2px solid $secondary-color;
-    padding: 9px;
-  }
-}
-
-/* Items */
-
-.items {
-  margin-top: 20px;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 1rem;
-
-  li {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 10px 15px;
-    margin: 0 5px 20px;
-    font-weight: 700;
-    cursor: pointer;
-  }
+.hidden {
+  display: hidden;
 }
 
 // table for emtion and movie
@@ -73,6 +38,12 @@ table {
   margin: 20px 0;
   font-size: 1rem;
   cursor: default;
+  width: 100%;
+  height: 100%;
+}
+
+%float-shared {
+  position: absolute;
 }
 
 th {
@@ -82,15 +53,54 @@ th {
   border-bottom: 2px solid $primary-color;
 }
 
-td {
+.dropDown-emotion {
+  width: 100%;
+  height: 100%;
+  display: flex;
+
+  div {
+    padding-left: 8px;
+  }
+}
+
+tr {
   position: relative;
+  width: 100%;
+  height: 100%;
+
+  .front-button-wrap {
+    position: absolute;
+    top: -1px;
+    left: -10px;
+    display: flex;
+    flex-direction: column;
+    // justify-content: space-between;
+    align-items: center;
+
+    div {
+      padding: 1px 2px;
+    }
+    & > div {
+      margin-bottom: 2px;
+    }
+  }
+
+  .open-button-style {
+    position: absolute;
+    padding: 3px;
+    top: 9px;
+    right: 1px;
+  }
+}
+
+td {
   max-width: 150px;
   min-width: 100px;
+  position: relative;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  padding: 10px 10px;
-  vertical-align: middle;
+  padding: 15px;
   border-bottom: 1px solid #ddd;
 
   .count {
