--- a/front/src/css/main.css
+++ b/front/src/css/main.css
@@ -26,6 +26,10 @@
   background-color: #00214d;
   color: #ddd; }
 
+.bg-secondaryLight {
+  background-color: #f7c8b0;
+  color: #000; }
+
 .py-1 {
   padding-top: 1rem;
   padding-bottom: 1rem; }
@@ -73,7 +77,7 @@
 a {
   text-decoration: none; }
 
-.btn-primary, .btn-secondary, .btn-light, .btn-dark, .btn-remove {
+.btn-primary, .btn-secondary, .btn-light, .btn-dark, .btn-small, .btn-remove {
   display: inline-block;
   padding: 0.8rem 2rem;
   transition: all 0.5s;
@@ -81,7 +85,7 @@ a {
   cursor: pointer;
   border-radius: 10px;
   font-weight: 900; }
-  .btn-primary:hover, .btn-secondary:hover, .btn-light:hover, .btn-dark:hover, .btn-remove:hover {
+  .btn-primary:hover, .btn-secondary:hover, .btn-light:hover, .btn-dark:hover, .btn-small:hover, .btn-remove:hover {
     opacity: 0.9; }
 
 .btn-primary {
@@ -99,6 +103,14 @@ a {
 .btn-dark {
   background-color: #00214d;
   color: #ddd; }
+
+.btn-small {
+  border-radius: 5px;
+  font-weight: 400;
+  padding: 0rem;
+  border: 2px solid #0a0526;
+  background-color: #fffcfc;
+  color: #000; }
 
 .btn-remove {
   font-size: 16px;
@@ -133,6 +145,10 @@ a {
 .bg-dark {
   background-color: #00214d;
   color: #ddd; }
+
+.bg-secondaryLight {
+  background-color: #f7c8b0;
+  color: #000; }
 
 .py-1 {
   padding-top: 1rem;
@@ -182,7 +198,7 @@ a {
   margin: auto;
   min-height: 80vh;
   max-height: calc(100vh - 100px - 30px);
-  padding: 1rem;
+  padding: 2rem;
   overflow-y: scroll;
   display: flex;
   flex-direction: column; }
@@ -268,25 +284,6 @@ a {
   width: 8px !important;
   background-color: #aaa; }
 
-#navbar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between; }
-  #navbar .nav-link {
-    display: inline-block;
-    padding: 0.8rem 2rem;
-    transition: all 0.5s;
-    border-bottom: 2px solid transparent;
-    cursor: pointer;
-    border-radius: 1.5rem;
-    font-weight: 900;
-    color: #ddd; }
-    #navbar .nav-link:hover {
-      border-bottom: 2px solid #ee8753; }
-  #navbar .selected {
-    background-color: #ee8753;
-    color: #000; }
-
 #item-form {
   padding: 10px;
   border-bottom: 1px solid #ccc; }
@@ -319,10 +316,34 @@ a {
     font-weight: 700;
     cursor: pointer; }
 
+#navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between; }
+  #navbar .nav-link {
+    display: inline-block;
+    padding: 0.8rem 2rem;
+    transition: all 0.5s;
+    border-bottom: 2px solid transparent;
+    cursor: pointer;
+    border-radius: 1.5rem;
+    font-weight: 900;
+    color: #ddd; }
+    #navbar .nav-link:hover {
+      border-bottom: 2px solid #ee8753; }
+  #navbar .selected {
+    background-color: #ee8753;
+    color: #000; }
+
+.hidden {
+  display: hidden; }
+
 table {
   margin: 20px 0;
   font-size: 1rem;
-  cursor: default; }
+  cursor: default;
+  width: 100%;
+  height: 100%; }
 
 th {
   padding: 12px 15px;
@@ -330,15 +351,42 @@ th {
   font-weight: bold;
   border-bottom: 2px solid #0a0526; }
 
-td {
+.dropDown-emotion {
+  width: 100%;
+  height: 100%;
+  display: flex; }
+  .dropDown-emotion div {
+    padding-left: 8px; }
+
+tr {
   position: relative;
+  width: 100%;
+  height: 100%; }
+  tr .front-button-wrap {
+    position: absolute;
+    top: -1px;
+    left: -10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    tr .front-button-wrap div {
+      padding: 1px 2px; }
+    tr .front-button-wrap > div {
+      margin-bottom: 2px; }
+  tr .open-button-style {
+    position: absolute;
+    padding: 3px;
+    top: 9px;
+    right: 1px; }
+
+td {
   max-width: 150px;
   min-width: 100px;
+  position: relative;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  padding: 10px 10px;
-  vertical-align: middle;
+  padding: 15px;
   border-bottom: 1px solid #ddd; }
   td .count {
     border-radius: 5px;
