--- a/front/scss/_temp.scss
+++ b/front/scss/_temp.scss
@@ -72,8 +72,9 @@
     rgba(76, 47, 47, 0.1) 0px 3px 6px, rgba(15, 15, 15, 0.2) 0px 9px 24px;
 
   max-width: calc(100vw - 24px);
-  width: 30vw;
-  min-height: 34px;
+  width: 100%;
+  // height: 100%;
+  // min-height: 34px;
   max-height: 90vh;
   padding: 0.3rem;
 
@@ -108,8 +109,13 @@
   }
 
   .update-field {
+    width: 100%;
+    // height: 100%;
     padding: 5px;
     font-size: 1rem;
+
+    height: auto !important;
+    // overflow: auto;
   }
 }
 
@@ -123,12 +129,12 @@
 
   // non visual
   display: grid;
-  grid-template-columns: 1fr 20fr;
+  grid-template-columns: 1fr 200fr;
   align-items: center;
   overflow: hidden;
   text-overflow: ellipsis;
   cursor: pointer;
-  z-index: 1;
+  // z-index: 1;
 
   &:hover {
     background: darken(rgba(242, 241, 238, 0.6), 8%);
