--- a/front/scss/main.scss
+++ b/front/scss/main.scss
@@ -130,16 +130,17 @@ td:hover {
   .tooltiptext {
     // visual
     background-color: $secondary-color;
-    border: 3px solid $primary-color;
+    border: 2px solid $primary-color;
     border-radius: 6px;
-    padding: 12px;
+    padding: 10px;
     padding-top: 7px;
     font-size: 0.9rem;
-    height: 100%;
+    // height: 100%;
+    width: 170%;
 
     // non-visual
     visibility: hidden;
-    white-space: nowrap;
+    white-space: pre-wrap;
     text-align: auto;
 
     /* Position the tooltip text */
@@ -149,7 +150,12 @@ td:hover {
     left: 0px;
   }
 
-  &:hover .tooltiptext {
-    visibility: visible;
+  &:hover {
+    .tooltiptext {
+      visibility: visible;
+    }
+    div {
+      visibility: hidden !important;
+    }
   }
 }
