--- a/front/scss/_temp.scss
+++ b/front/scss/_temp.scss
@@ -73,8 +73,6 @@
 
   max-width: calc(100vw - 24px);
   width: 100%;
-  // height: 100%;
-  // min-height: 34px;
   max-height: 90vh;
   padding: 0.3rem;
 
@@ -107,16 +105,42 @@
     color: #999;
     font-size: 0.8rem;
   }
+}
 
-  .update-field {
-    width: 100%;
-    // height: 100%;
-    padding: 5px;
-    font-size: 1rem;
+.grow-wrap {
+  height: 10px;
+  width: 100%;
+  display: grid;
 
-    height: auto !important;
-    // overflow: auto;
-  }
+  white-space: -moz-pre-wrap; /* Mozilla */
+  white-space: -hp-pre-wrap; /* HP printers */
+  white-space: -o-pre-wrap; /* Opera 7 */
+  white-space: -pre-wrap; /* Opera 4-6 */
+  white-space: pre-wrap; /* CSS 2.1 */
+  white-space: pre-line; /* CSS 3 (and 2.1 as well, actually) */
+  word-wrap: break-word; /* IE */
+  word-break: break-all;
+
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
+}
+.grow-wrap::after {
+  content: attr(data-replicated-value) " ";
+  white-space: pre-wrap;
+  visibility: hidden;
+}
+.grow-wrap > textarea {
+  // resize: none;
+  overflow: hidden;
+}
+.grow-wrap > textarea,
+.grow-wrap::after {
+  border: 1px solid black;
+  padding: 0.5rem;
+  font: inherit;
+  grid-area: 1 / 1 / 2 / 2;
 }
 
 .no-wrap {
