--- a/front/src/css/main.css
+++ b/front/src/css/main.css
@@ -255,11 +255,45 @@ a {
     padding: 10px 0;
     color: #999;
     font-size: 0.8rem; }
-  .overlay-box .update-field {
-    width: 100%;
-    padding: 5px;
-    font-size: 1rem;
-    height: auto !important; }
+
+.grow-wrap {
+  height: 10px;
+  width: 100%;
+  display: grid;
+  white-space: -moz-pre-wrap;
+  /* Mozilla */
+  white-space: -hp-pre-wrap;
+  /* HP printers */
+  white-space: -o-pre-wrap;
+  /* Opera 7 */
+  white-space: -pre-wrap;
+  /* Opera 4-6 */
+  white-space: pre-wrap;
+  /* CSS 2.1 */
+  white-space: pre-line;
+  /* CSS 3 (and 2.1 as well, actually) */
+  word-wrap: break-word;
+  /* IE */
+  word-break: break-all;
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto; }
+
+.grow-wrap::after {
+  content: attr(data-replicated-value) " ";
+  white-space: pre-wrap;
+  visibility: hidden; }
+
+.grow-wrap > textarea {
+  overflow: hidden; }
+
+.grow-wrap > textarea,
+.grow-wrap::after {
+  border: 1px solid black;
+  padding: 0.5rem;
+  font: inherit;
+  grid-area: 1 / 1 / 2 / 2; }
 
 .no-wrap {
   background: rgba(242, 241, 238, 0.6);
