fixed padding that disrupts display

--- a/front/scss/main.scss
+++ b/front/scss/main.scss
@@ -101,6 +101,7 @@ td {
   overflow: hidden;
   text-overflow: ellipsis;
   padding: 15px;
+  padding-right: 0rem;
   border-bottom: 1px solid #ddd;
 
   .count {
