--- a/front/src/css/main.css
+++ b/front/src/css/main.css
@@ -232,7 +232,7 @@ a {
   background: white;
   box-shadow: rgba(15, 15, 15, 0.05) 0px 0px 0px 1px, rgba(76, 47, 47, 0.1) 0px 3px 6px, rgba(15, 15, 15, 0.2) 0px 9px 24px;
   max-width: calc(100vw - 24px);
-  width: 100%;
+  width: 105%;
   max-height: 90vh;
   padding: 0.3rem;
   display: flex;
@@ -421,6 +421,7 @@ td {
   overflow: hidden;
   text-overflow: ellipsis;
   padding: 15px;
+  padding-right: 0rem;
   border-bottom: 1px solid #ddd; }
   td .count {
     border-radius: 5px;
