--- a/front/scss/_utils.scss
+++ b/front/scss/_utils.scss
@@ -5,6 +5,9 @@
   margin: 0;
   box-sizing: border-box !important;
   font-family: Arial, Helvetica, sans-serif;
+
+  overflow-wrap: break-word;
+  word-break: break-word;
 }
 
 .container {
