--- a/front/scss/main.scss
+++ b/front/scss/main.scss
@@ -42,10 +42,6 @@ table {
   height: 100%;
 }
 
-%float-shared {
-  position: absolute;
-}
-
 th {
   padding: 12px 15px;
   text-align: left;
@@ -68,55 +64,50 @@ tr {
   width: 100%;
   height: 100%;
 
-  .front-button-wrap {
-    position: absolute;
-    top: -1px;
-    left: -10px;
-    display: flex;
-    flex-direction: column;
-    // justify-content: space-between;
-    align-items: center;
+  td {
+    max-width: 150px;
+    min-width: 100px;
+    // position: relative;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding: 15px;
+    padding-right: 0rem;
+    border-bottom: 1px solid #ddd;
 
-    div {
-      padding: 1px 2px;
+    .front-button-wrap {
+      position: absolute;
+      top: -1px;
+      left: -10px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      div {
+        padding: 1px 2px;
+      }
+      & > div {
+        margin-bottom: 2px;
+      }
     }
-    & > div {
-      margin-bottom: 2px;
+
+    .count {
+      border-radius: 5px;
+      padding: 0.5rem;
+      margin-right: 0.5rem;
     }
-  }
 
-  .open-button-style {
-    position: absolute;
-    padding: 3px;
-    top: 9px;
-    right: 1px;
-  }
-}
+    .open-button-wrapper {
+      white-space: nowrap;
+      position: relative;
 
-td {
-  max-width: 150px;
-  min-width: 100px;
-  position: relative;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  padding: 15px;
-  padding-right: 0rem;
-  border-bottom: 1px solid #ddd;
-
-  .count {
-    border-radius: 5px;
-    padding: 0.5rem;
-    margin-right: 0.5rem;
-  }
-
-  .clips-select {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 200px;
-    padding: 10px;
-    border: 1px solid #ccc;
+      .open-button-style {
+        position: absolute;
+        padding: 3px;
+        top: -24px;
+        right: 1px;
+      }
+    }
   }
 }
 
