--- a/front/src/css/main.css
+++ b/front/src/css/main.css
@@ -66,7 +66,9 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box !important;
-  font-family: Arial, Helvetica, sans-serif; }
+  font-family: Arial, Helvetica, sans-serif;
+  overflow-wrap: break-word;
+  word-break: break-word; }
 
 .container {
   max-width: 1280px;
@@ -258,31 +260,12 @@ a {
 
 .grow-wrap {
   height: 10px;
-  width: 100%;
-  display: grid;
-  white-space: -moz-pre-wrap;
-  /* Mozilla */
-  white-space: -hp-pre-wrap;
-  /* HP printers */
-  white-space: -o-pre-wrap;
-  /* Opera 7 */
-  white-space: -pre-wrap;
-  /* Opera 4-6 */
-  white-space: pre-wrap;
-  /* CSS 2.1 */
-  white-space: pre-line;
-  /* CSS 3 (and 2.1 as well, actually) */
-  word-wrap: break-word;
-  /* IE */
-  word-break: break-all;
-  -webkit-hyphens: auto;
-  -moz-hyphens: auto;
-  -ms-hyphens: auto;
-  hyphens: auto; }
+  width: 100% !important;
+  display: grid; }
   .grow-wrap::after {
     content: attr(data-replicated-value) " ";
-    white-space: pre-wrap;
-    visibility: hidden; }
+    visibility: hidden;
+    white-space: pre-wrap; }
   .grow-wrap > textarea {
     overflow: hidden; }
   .grow-wrap > textarea, .grow-wrap::after {
@@ -392,44 +375,38 @@ tr {
   position: relative;
   width: 100%;
   height: 100%; }
-  tr .front-button-wrap {
-    position: absolute;
-    top: -1px;
-    left: -10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center; }
-    tr .front-button-wrap div {
-      padding: 1px 2px; }
-    tr .front-button-wrap > div {
-      margin-bottom: 2px; }
-  tr .open-button-style {
-    position: absolute;
-    padding: 3px;
-    top: 9px;
-    right: 1px; }
-
-td {
-  max-width: 150px;
-  min-width: 100px;
-  position: relative;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  padding: 15px;
-  padding-right: 0rem;
-  border-bottom: 1px solid #ddd; }
-  td .count {
-    border-radius: 5px;
-    padding: 0.5rem;
-    margin-right: 0.5rem; }
-  td .clips-select {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 200px;
-    padding: 10px;
-    border: 1px solid #ccc; }
+  tr td {
+    max-width: 150px;
+    min-width: 100px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding: 15px;
+    padding-right: 0rem;
+    border-bottom: 1px solid #ddd; }
+    tr td .front-button-wrap {
+      position: absolute;
+      top: -1px;
+      left: -10px;
+      display: flex;
+      flex-direction: column;
+      align-items: center; }
+      tr td .front-button-wrap div {
+        padding: 1px 2px; }
+      tr td .front-button-wrap > div {
+        margin-bottom: 2px; }
+    tr td .count {
+      border-radius: 5px;
+      padding: 0.5rem;
+      margin-right: 0.5rem; }
+    tr td .open-button-wrapper {
+      white-space: nowrap;
+      position: relative; }
+      tr td .open-button-wrapper .open-button-style {
+        position: absolute;
+        padding: 3px;
+        top: -24px;
+        right: 1px; }
 
 th:hover,
 td:hover {
