--- a/front/src/css/main.css
+++ b/front/src/css/main.css
@@ -352,6 +352,7 @@ a {
   display: hidden; }
 
 table {
+  white-space: nowrap !important;
   border-spacing: 0px;
   margin: 20px 0;
   font-size: 1rem;
@@ -402,7 +403,6 @@ td {
   max-width: 150px;
   min-width: 100px;
   position: relative;
-  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   padding: 15px;
