--- a/front/scss/main.scss
+++ b/front/scss/main.scss
@@ -32,12 +32,35 @@
   display: hidden;
 }
 
+#filters {
+  margin-top: 20px;
+
+  .table-filter {
+    width: 200px;
+    padding: 15px;
+    position: relative;
+
+    .select-filter {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      select {
+        width: 50%;
+      }
+    }
+    input {
+      width: 100%;
+    }
+  }
+}
+
 table {
   white-space: nowrap !important;
 
   // border-collapse: collapse;
   border-spacing: 0px;
-  margin: 20px 0;
+  margin-top: 20px;
   font-size: 1rem;
   cursor: default;
   width: 100%;
@@ -65,10 +88,21 @@ th {
   }
 }
 
-.test-shrink {
+.front-button-wrap {
   position: absolute;
   top: -1px;
-  left: -10px;
+  left: -5px;
+  display: flex;
+  flex-direction: column;
+  // justify-content: space-between;
+  align-items: center;
+
+  div {
+    padding: 1px 2px;
+  }
+  & > div {
+    margin-bottom: 2px;
+  }
 }
 
 tr {
@@ -76,22 +110,6 @@ tr {
   width: 100%;
   height: 100%;
 
-  .front-button-wrap {
-    position: absolute;
-    top: -1px;
-    left: -10px;
-    display: flex;
-    flex-direction: column;
-    // justify-content: space-between;
-    align-items: center;
-
-    div {
-      padding: 1px 2px;
-    }
-    & > div {
-      margin-bottom: 2px;
-    }
-  }
   // Child of td element, here because it's together with front-button-wrap ()
   .open-button-style {
     position: absolute;
@@ -117,15 +135,6 @@ td {
     padding: 0.5rem;
     margin-right: 0.5rem;
   }
-
-  // .clips-select {
-  //   position: absolute;
-  //   top: 0px;
-  //   left: 0px;
-  //   width: 200px;
-  //   padding: 10px;
-  //   border: 1px solid #ccc;
-  // }
 }
 
 th:hover,
