--- a/front/src/css/main.css
+++ b/front/src/css/main.css
@@ -1,3 +1,6 @@
+.hidden {
+  visibility: hidden; }
+
 .color-primary {
   color: #0a0526; }
 
@@ -28,6 +31,10 @@
 
 .bg-secondaryLight {
   background-color: #f7c8b0;
+  color: #000; }
+
+.bg-red {
+  background-color: #eca4a4;
   color: #000; }
 
 .py-1 {
@@ -120,6 +127,9 @@ a {
   color: red;
   padding: 0; }
 
+.hidden {
+  visibility: hidden; }
+
 .color-primary {
   color: #0a0526; }
 
@@ -150,6 +160,10 @@ a {
 
 .bg-secondaryLight {
   background-color: #f7c8b0;
+  color: #000; }
+
+.bg-red {
+  background-color: #eca4a4;
   color: #000; }
 
 .py-1 {
@@ -351,10 +365,26 @@ a {
 .hidden {
   display: hidden; }
 
+#filters {
+  margin-top: 20px; }
+  #filters .table-filter {
+    width: 200px;
+    padding: 15px;
+    position: relative; }
+    #filters .table-filter .select-filter {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between; }
+      #filters .table-filter .select-filter select {
+        width: 50%; }
+    #filters .table-filter input {
+      width: 100%; }
+
 table {
   white-space: nowrap !important;
   border-spacing: 0px;
-  margin: 20px 0;
+  margin-top: 20px;
   font-size: 1rem;
   cursor: default;
   width: 100%;
@@ -373,26 +403,22 @@ th {
   .dropDown-emotion div {
     padding-left: 8px; }
 
-.test-shrink {
+.front-button-wrap {
   position: absolute;
   top: -1px;
-  left: -10px; }
+  left: -5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  .front-button-wrap div {
+    padding: 1px 2px; }
+  .front-button-wrap > div {
+    margin-bottom: 2px; }
 
 tr {
   position: relative;
   width: 100%;
   height: 100%; }
-  tr .front-button-wrap {
-    position: absolute;
-    top: -1px;
-    left: -10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center; }
-    tr .front-button-wrap div {
-      padding: 1px 2px; }
-    tr .front-button-wrap > div {
-      margin-bottom: 2px; }
   tr .open-button-style {
     position: absolute;
     top: 9px;
