--- a/front/scss/main.scss
+++ b/front/scss/main.scss
@@ -34,9 +34,10 @@
 
 #filters {
   margin-top: 20px;
+  margin-bottom: 10px;
 
   .table-filter {
-    width: 200px;
+    min-width: 200px;
     padding: 15px;
     position: relative;
 
