--- a/front/scss/_temp.scss
+++ b/front/scss/_temp.scss
@@ -34,6 +34,7 @@
   }
 
   .attribute {
+    min-height: 40px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
@@ -73,7 +74,9 @@
 
   max-width: calc(100vw - 24px);
   width: 105%;
-  max-height: 90vh;
+  height: 100%;
+  max-height: 40vh;
+  overflow: scroll;
   padding: 0.3rem;
 
   //   non-visual
@@ -91,7 +94,7 @@
     input {
       border: none;
       padding: 0, 2px;
-      width: 70%;
+      width: 100%;
       font-size: 1rem;
 
       &:focus {
