--- a/front/src/css/main.css
+++ b/front/src/css/main.css
@@ -225,6 +225,7 @@ a {
     padding: 0.5rem;
     border-bottom: 2px solid #ee8753; }
   .overlay-window .attribute {
+    min-height: 40px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
@@ -252,7 +253,9 @@ a {
   box-shadow: rgba(15, 15, 15, 0.05) 0px 0px 0px 1px, rgba(76, 47, 47, 0.1) 0px 3px 6px, rgba(15, 15, 15, 0.2) 0px 9px 24px;
   max-width: calc(100vw - 24px);
   width: 105%;
-  max-height: 90vh;
+  height: 100%;
+  max-height: 40vh;
+  overflow: scroll;
   padding: 0.3rem;
   display: flex;
   white-space: nowrap;
@@ -266,7 +269,7 @@ a {
     .overlay-box .filter input {
       border: none;
       padding: 0, 2px;
-      width: 70%;
+      width: 100%;
       font-size: 1rem; }
       .overlay-box .filter input:focus {
         outline: none; }
