--- a/front/scss/_temp.scss
+++ b/front/scss/_temp.scss
@@ -76,7 +76,6 @@
   width: 105%;
   height: 100%;
   max-height: 40vh;
-  overflow: scroll;
   padding: 0.3rem;
 
   //   non-visual
@@ -85,6 +84,11 @@
   flex-direction: column;
   overflow: visible;
 
+  .scroll-wrapper {
+    overflow-y: scroll !important;
+  }
+
+  //filter emotions
   .filter {
     width: 100%;
     border-bottom: 2px solid $lightgray;
