--- a/front/src/css/main.css
+++ b/front/src/css/main.css
@@ -255,12 +255,13 @@ a {
   width: 105%;
   height: 100%;
   max-height: 40vh;
-  overflow: scroll;
   padding: 0.3rem;
   display: flex;
   white-space: nowrap;
   flex-direction: column;
   overflow: visible; }
+  .overlay-box .scroll-wrapper {
+    overflow-y: scroll !important; }
   .overlay-box .filter {
     width: 100%;
     border-bottom: 2px solid gray;
