--- a/front/scss/_utils.scss
+++ b/front/scss/_utils.scss
@@ -17,6 +17,12 @@
   overflow: hidden;
 }
 
+.divider {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-bottom: 2px solid $primary-color;
+}
+
 a {
   text-decoration: none;
 }
