--- a/front/scss/_emotionList.scss
+++ b/front/scss/_emotionList.scss
@@ -1,12 +1,12 @@
 .input-analysis-wrapper {
   display: grid;
-  grid-template-columns: 1fr 4fr;
+  grid-template-columns: 1fr 3fr;
   grid-gap: 10px;
   font-size: 0.8rem;
 
   .categories {
-    grid-column: 2 / span 3;
-    grid-row: 1 / span 5;
+    // grid-column: 2 / span 3;
+    // grid-row: 1 / span 5;
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -16,19 +16,17 @@
       display: inline-block;
       border: 2px solid $primary-color;
       padding: 5px;
-      margin: 5px;
+      margin-bottom: 5px;
 
       .items {
+        margin: 3px;
         display: grid;
-        grid-template-columns: repeat(9, 1fr);
+        grid-template-columns: repeat(7, 1fr);
         list-style: none;
-        margin: 0px;
-        margin-top: 10px;
-        padding: 0;
       }
 
       .items li {
-        margin: 5px;
+        margin: 0px;
         padding: 5px;
         background-color: #eee;
         cursor: move;
@@ -45,20 +43,20 @@
   padding: 10px;
 }
 
+input {
+  border: none;
+  outline: none;
+  border-bottom: 3px solid $primary_color;
+  padding-bottom: 5px;
+  font-size: 1rem;
+  width: 170px;
+  margin: 5px;
+}
+
 #emotion-input-submit {
   display: flex;
   align-items: center;
   justify-content: left;
-
-  input {
-    border: none;
-    outline: none;
-    border-bottom: 3px solid $primary_color;
-    padding-bottom: 5px;
-    font-size: 1rem;
-    width: 170px;
-    margin: 5px;
-  }
 }
 
 /* Items */
