--- a/front/src/css/main.css
+++ b/front/src/css/main.css
@@ -325,12 +325,10 @@ a {
 
 .input-analysis-wrapper {
   display: grid;
-  grid-template-columns: 1fr 4fr;
+  grid-template-columns: 1fr 3fr;
   grid-gap: 10px;
   font-size: 0.8rem; }
   .input-analysis-wrapper .categories {
-    grid-column: 2 / span 3;
-    grid-row: 1 / span 5;
     display: flex;
     flex-direction: column;
     width: 100%; }
@@ -339,16 +337,14 @@ a {
       display: inline-block;
       border: 2px solid #0a0526;
       padding: 5px;
-      margin: 5px; }
+      margin-bottom: 5px; }
       .input-analysis-wrapper .categories .category .items {
+        margin: 3px;
         display: grid;
-        grid-template-columns: repeat(9, 1fr);
-        list-style: none;
-        margin: 0px;
-        margin-top: 10px;
-        padding: 0; }
+        grid-template-columns: repeat(7, 1fr);
+        list-style: none; }
       .input-analysis-wrapper .categories .category .items li {
-        margin: 5px;
+        margin: 0px;
         padding: 5px;
         background-color: #eee;
         cursor: move; }
@@ -358,18 +354,19 @@ a {
 #item-form {
   padding: 10px; }
 
+input {
+  border: none;
+  outline: none;
+  border-bottom: 3px solid #0a0526;
+  padding-bottom: 5px;
+  font-size: 1rem;
+  width: 170px;
+  margin: 5px; }
+
 #emotion-input-submit {
   display: flex;
   align-items: center;
   justify-content: left; }
-  #emotion-input-submit input {
-    border: none;
-    outline: none;
-    border-bottom: 3px solid #0a0526;
-    padding-bottom: 5px;
-    font-size: 1rem;
-    width: 170px;
-    margin: 5px; }
 
 /* Items */
 .items {
