--- a/front/scss/_temp.scss
+++ b/front/scss/_temp.scss
@@ -72,15 +72,15 @@
   box-shadow: rgba(15, 15, 15, 0.05) 0px 0px 0px 1px,
     rgba(76, 47, 47, 0.1) 0px 3px 6px, rgba(15, 15, 15, 0.2) 0px 9px 24px;
 
-  max-width: calc(100vw - 24px);
-  width: 105%;
   height: 100%;
+
+  width: 40vw;
   max-height: 40vh;
   padding: 0.3rem;
 
   //   non-visual
   display: flex;
-  white-space: nowrap;
+  // white-space: nowrap;
   flex-direction: column;
   overflow: visible !important;
 
@@ -92,14 +92,16 @@
   .filter {
     width: 100%;
     border-bottom: 2px solid $lightgray;
-    padding-bottom: 5px;
-    margin-bottom: 5px;
+    padding-bottom: 2px;
+    margin-bottom: 2px;
 
     input {
       border: none;
       padding: 0, 2px;
       width: 100%;
       font-size: 1rem;
+      margin: 0;
+      padding: 2px;
 
       &:focus {
         outline: none;
@@ -147,6 +149,7 @@
   width: 100%;
   min-height: 34px;
   font-size: 14px;
+  border: 2px solid transparent;
 
   // non visual
   display: grid;
@@ -158,7 +161,8 @@
   // z-index: 1;
 
   &:hover {
-    background: darken(rgba(242, 241, 238, 0.6), 8%);
+    // background: lighten($secondary-color, 8%);
+    border: 2px solid $secondary-color;
     overflow: visible;
   }
 }
