--- a/front/src/css/main.css
+++ b/front/src/css/main.css
@@ -256,13 +256,11 @@ a {
   border-radius: 4px;
   background: white;
   box-shadow: rgba(15, 15, 15, 0.05) 0px 0px 0px 1px, rgba(76, 47, 47, 0.1) 0px 3px 6px, rgba(15, 15, 15, 0.2) 0px 9px 24px;
-  max-width: calc(100vw - 24px);
-  width: 105%;
   height: 100%;
+  width: 40vw;
   max-height: 40vh;
   padding: 0.3rem;
   display: flex;
-  white-space: nowrap;
   flex-direction: column;
   overflow: visible !important; }
   .overlay-box .scroll-wrapper {
@@ -270,13 +268,15 @@ a {
   .overlay-box .filter {
     width: 100%;
     border-bottom: 2px solid gray;
-    padding-bottom: 5px;
-    margin-bottom: 5px; }
+    padding-bottom: 2px;
+    margin-bottom: 2px; }
     .overlay-box .filter input {
       border: none;
       padding: 0, 2px;
       width: 100%;
-      font-size: 1rem; }
+      font-size: 1rem;
+      margin: 0;
+      padding: 2px; }
       .overlay-box .filter input:focus {
         outline: none; }
   .overlay-box label {
@@ -306,6 +306,7 @@ a {
   width: 100%;
   min-height: 34px;
   font-size: 14px;
+  border: 2px solid transparent;
   display: grid;
   grid-template-columns: 1fr 200fr;
   align-items: center;
@@ -313,7 +314,7 @@ a {
   text-overflow: ellipsis;
   cursor: pointer; }
   .no-wrap:hover {
-    background: rgba(224, 222, 215, 0.6);
+    border: 2px solid #ee8753;
     overflow: visible; }
 
 #dot {
@@ -485,26 +486,3 @@ td {
 th:hover,
 td:hover {
   background-color: #f7c8b0; }
-
-.tooltip {
-  position: relative; }
-  .tooltip .tooltiptext {
-    background-color: #ee8753;
-    border: 2px solid #0a0526;
-    border-radius: 6px;
-    padding: 10px;
-    padding-top: 7px;
-    font-size: 0.9rem;
-    width: 170%;
-    visibility: hidden;
-    white-space: pre-wrap;
-    text-align: auto;
-    /* Position the tooltip text */
-    position: absolute;
-    z-index: 2;
-    top: 0px;
-    left: 0px; }
-  .tooltip:hover .tooltiptext {
-    visibility: visible; }
-  .tooltip:hover div {
-    visibility: hidden !important; }
