--- a/front/scss/_temp.scss
+++ b/front/scss/_temp.scss
@@ -65,6 +65,11 @@
   cursor: pointer;
 }
 
+emoji-picker {
+  height: 40vh;
+  overflow: scroll !important;
+}
+
 .overlay-box {
   // visual
   border-radius: 4px;
