--- a/front/src/css/main.css
+++ b/front/src/css/main.css
@@ -252,6 +252,10 @@ a {
 .movie-title {
   cursor: pointer; }
 
+emoji-picker {
+  height: 40vh;
+  overflow: scroll !important; }
+
 .overlay-box {
   border-radius: 4px;
   background: white;
