--- a/front/src/css/main.css
+++ b/front/src/css/main.css
@@ -419,15 +419,16 @@ input {
     min-width: 200px;
     padding: 15px;
     position: relative; }
-    #filters .table-filter .select-filter {
+    #filters .table-filter .flex-wrapper {
       width: 100%;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: space-between; }
-      #filters .table-filter .select-filter select {
-        width: 50%; }
-    #filters .table-filter input {
-      width: 100%; }
+      #filters .table-filter .flex-wrapper select {
+        width: 100% !important; }
+      #filters .table-filter .flex-wrapper input {
+        width: 100% !important; }
 
 table {
   white-space: nowrap !important;
