rank movies table and dynamic max screen-width

--- a/front/scss/_config.scss
+++ b/front/scss/_config.scss
@@ -1,6 +1,6 @@
 @import "functions";
 
-$screen-width: 1280px;
+$screen-width: 99.5vw;
 $primary-color: #0a0526;
 $secondary-color: #ee8753;
 $light-color: #fffcfc;
