--- a/front/src/css/main.css
+++ b/front/src/css/main.css
@@ -396,7 +396,7 @@ input {
   #navbar .nav-link,
   #navbar #user-button {
     display: inline-block;
-    padding: 0.5rem 1.2rem;
+    padding: 0.5rem 0.7rem;
     transition: all 0.5s;
     border-bottom: 2px solid transparent;
     cursor: pointer;
@@ -409,6 +409,7 @@ input {
     #navbar #user-button:hover {
       border-bottom: 2px solid #ee8753; }
   #navbar #user-button {
+    display: none;
     padding-top: 0.3rem;
     padding-bottom: 0.3rem; }
   #navbar .selected {
